# qdir

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
.github/: FUNDING.yml
assets/: qdir.tape
src/: lib.rs  main.rs
src/name/: mod.rs
src/pet/: mod.rs
tests/: main_test.rs
